Implemented Basic functionallity
