# swagger.yml
@@ -1,8 +1,5 @@
 basePath: /user-service/api/v1
 swagger: '2.0'
-schemes:
-  - http
-  - https
 info:
   version: 1.0.0
   title: User Service
@@ -16,6 +13,20 @@ info:
     name: MIT
     url: http://opensource.org/licenses/MIT
 paths:
+  /authorize/code:
+    get:
+      parameters:
+        - $ref: '#/parameters/redirectUriInQuery'
+      responses:
+        '301':
+          description: Redirect to RiderectUri
+  /authorize/token:
+    get:
+      parameters:
+        - $ref: '#/parameters/tokenCodeInQuery'
+      responses:
+        '200':
+          description: Token in Body and Headers (UserService-Application Role Needed)
   /login:
     post:
       security: []
@@ -142,6 +153,17 @@ paths:
         '204':
           description: OK
 parameters:
+  tokenCodeInQuery:
+    name: code
+    in: query
+    type: string
+    description: code for Token authorization
+  redirectUriInQuery:
+    name: redirect
+    in: query
+    type: string
+    description: Redirect Uri in Query
+    default: ./dummy
   resetTokenInQuery:
     name: token
     in: query
